# mkdocs-vercel

./: .gitignore  .npmrc  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/.overrides/: 404.html
docs/.overrides/partials/: copyright.html
docs/.snippets/: example.yml  pdm.yml  pip.yml  poetry.yml  uv.yml
docs/assets/stylesheets/: extra.css
