[project]
name = "mkdocs-vercel"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "artwall",
    "cairosvg>=2.7.1",
    "iconoclast>=3.2.0",
    "mkdocs-material",
    "pillow>=11.0.0",
]

[tool.uv.sources]
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }
artwall = { git = "https://github.com/celsiusnarhwal/artwall" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
